--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@splinetool/runtime": "^1.12.29",
     "@supabase/supabase-js": "^2.89.0",
     "@types/three": "^0.182.0",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
